updates to the permissions and existing tests
