# server/schemas/openapi.json
@@ -448,88 +448,40 @@
       "ResultGet": {
         "additionalProperties": false,
         "properties": {
-          "allocate_output": {
-            "type": "string"
-          },
-          "allocate_serial": {
-            "type": "string"
-          },
-          "allocate_status": {
-            "type": "integer"
-          },
-          "cleanup_output": {
-            "type": "string"
-          },
-          "cleanup_serial": {
-            "type": "string"
-          },
-          "cleanup_status": {
-            "type": "integer"
-          },
           "device_info": {
             "additionalProperties": {},
             "type": "object"
           },
-          "firmware_update_output": {
-            "type": "string"
-          },
-          "firmware_update_serial": {
-            "type": "string"
-          },
-          "firmware_update_status": {
-            "type": "integer"
-          },
           "job_state": {
             "type": "string"
-          },
-          "provision_output": {
-            "type": "string"
-          },
-          "provision_serial": {
-            "type": "string"
-          },
-          "provision_status": {
-            "type": "integer"
-          },
-          "reserve_output": {
-            "type": "string"
-          },
-          "reserve_serial": {
-            "type": "string"
-          },
-          "reserve_status": {
-            "type": "integer"
-          },
-          "setup_output": {
-            "type": "string"
-          },
-          "setup_serial": {
-            "type": "string"
-          },
-          "setup_status": {
-            "type": "integer"
-          },
-          "test_output": {
-            "type": "string"
-          },
-          "test_serial": {
-            "type": "string"
-          },
-          "test_status": {
-            "type": "integer"
           }
         },
         "type": "object"
       },
       "ResultSchema": {
         "additionalProperties": false,
-        "properties": {},
+        "properties": {
+          "device_info": {
+            "additionalProperties": {},
+            "type": "object"
+          },
+          "job_state": {
+            "type": "string"
+          },
+          "status": {
+            "additionalProperties": {
+              "type": "integer"
+            },
+            "type": "object"
+          }
+        },
         "type": "object"
       },
       "SecretIn": {
         "additionalProperties": false,
         "properties": {
           "ephemeral": {
+            "default": false,
             "type": "boolean"
           },
           "expire_after": {
@@ -2214,158 +2166,6 @@
           }
         },
         "summary": "Post logs for a specified job ID.",
-        "tags": [
-          "V1"
-        ]
-      }
-    },
-    "/v1/result/{job_id}/output": {
-      "get": {
-        "description": "TODO: Remove after CLI/agent migration completes.\n\n:param job_id: UUID as a string for the job\n:raises HTTPError: BAD_REQUEST when job_id is invalid\n:return: Plain text output",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "job_id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful response"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPError"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Legacy endpoint to get job output for a specified job_id.",
-        "tags": [
-          "V1"
-        ]
-      },
-      "post": {
-        "description": "TODO: Remove after CLI/agent migration completes.\n\n:param job_id: UUID as a string for the job\n:raises HTTPError: BAD_REQUEST when job_id is invalid\n:return: \"OK\" on success",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "job_id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful response"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPError"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Legacy endpoint to post output for a specified job_id.",
-        "tags": [
-          "V1"
-        ]
-      }
-    },
-    "/v1/result/{job_id}/serial_output": {
-      "get": {
-        "description": "TODO: Remove after CLI/agent migration completes.\n\n:param job_id: UUID as a string for the job\n:raises HTTPError: BAD_REQUEST when job_id is invalid\n:return: Plain text serial output",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "job_id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful response"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPError"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Legacy endpoint to get latest serial output for a specified job ID.",
-        "tags": [
-          "V1"
-        ]
-      },
-      "post": {
-        "description": "TODO: Remove after CLI/agent migration completes.\n\n:param job_id: UUID as a string for the job\n:raises HTTPError: BAD_REQUEST when job_id is invalid\n:return: \"OK\" on success",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "job_id",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful response"
-          },
-          "404": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPError"
-                }
-              }
-            },
-            "description": "Not found"
-          }
-        },
-        "summary": "Legacy endpoint to post serial output for a specified job ID.",
         "tags": [
           "V1"
         ]
